Fix VS Code settings Correctly assign yaml files to jinja-yaml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "files.associations": {
         "*.sql": "jinja-sql",
-        "*.yml": "jinja-yml"
+        "*.yml": "jinja-yaml"
     },
     "dbt.perspectiveTheme": "Vintage"
 }
